Bug 1887584: Don't unintentionally instantiate the a11y engine if UIA is requested but the UIA pref is disabled. r=rkraesig,win-reviewers

I did consider the pref in my patches in bug 1886371.
nsWindow does a QI to IRawElementProviderSimple, which will deliberately fail if the UIA pref is disabled.
Unfortunately, i neglected to realise that it's already too late by that stage because we've already called nsWindow::GetAccessible, which instantiates the a11y engine.
Now, we check the UIA pref before we call GetAccessible.

Differential Revision: https://phabricator.services.mozilla.com/D205559