widget/windows/nsWindow.cpp
@@ -188,6 +188,7 @@
 #  include "mozilla/a11y/DocAccessible.h"
 #  include "mozilla/a11y/LazyInstantiator.h"
 #  include "mozilla/a11y/Platform.h"
+#  include "mozilla/StaticPrefs_accessibility.h"
 #  if !defined(WINABLEAPI)
 #    include <winable.h>
 #  endif  // !defined(WINABLEAPI)
@@ -5887,7 +5888,8 @@ bool nsWindow::ProcessMessageInternal(UINT msg, WPARAM& wParam, LPARAM& lParam,
           a11y::LazyInstantiator::EnableBlindAggregation(mWnd);
           result = true;
         }
-      } else if (objId == UiaRootObjectId) {
+      } else if (objId == UiaRootObjectId &&
+                 StaticPrefs::accessibility_uia_enable()) {
         if (a11y::LocalAccessible* acc = GetAccessible()) {
           RefPtr<IAccessible> ia;
           acc->GetNativeInterface(getter_AddRefs(ia));
